Add session endpoints (check/logout) and require auth on list/update/delete; update users UI/JS to handle session and logout

--- a/users.html
+++ b/users.html
@@ -9,6 +9,10 @@
 <body>
   <main class="container">
     <h1>Gestión de Usuarios</h1>
+    <div id="userBar" style="display:none; margin-bottom:12px;">
+      <span id="userName" style="margin-right:12px;"></span>
+      <button id="logoutBtn">Cerrar sesión</button>
+    </div>
 
     <section id="auth">
       <div class="card">
